frontend/test/should_pass/defYield_003xe.grg
using defYield;

test t
{
	def -x:E1->;
	pp:p(yield x);	
}

pattern p(def -x:E1->)
{
	-y:E1->;
	yield { yield x = y; }
}

