frontend/test/should_fail/pattern_003.grg
pattern Foo(x:Node)
{
	x;
	modify {}
}

test r {
	foo:Foo();
}